// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span>
      Test label
      <abbr
        title="required"
      >
        *
      </abbr>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  />
</DocumentFragment>
`;

exports[`Label > should render left icon 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span
      class="_icon_afc5be chop-icon__arrow-left"
    />
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render right icon 1`] = `
<DocumentFragment>
  <label
    class="_label_5091d6"
    for="test-input-id"
  >
    <span>
      Test label
    </span>
    <span
      class="_icon_afc5be chop-icon__arrow-down-right"
    />
  </label>
</DocumentFragment>
`;
